# jwall-gpt

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml  terraform-apply.yml  terraform-plan.yml  train.yml
benches/: matrix_backend_comparison.rs
configs/: nano.py  small.py  tiny.py
examples/: attention_demo.rs  mnist_dataset.rs  mnist_mlp.rs
infra/: README.md  backend.tf  main.tf  outputs.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
infra/modules/github_oidc/: main.tf  variables.tf
infra/modules/storage/: main.tf  outputs.tf  variables.tf
infra/modules/trainer/: main.tf  outputs.tf  variables.tf
infra/modules/vpc/: main.tf  outputs.tf  variables.tf
scripts/: prepare_dataset.py  preprocess.py
scripts/aws/: render-user-data.sh  train-worker.sh
scripts/git/: check-single-line-commit.sh
src/: lib.rs  main.rs
src/activations/: gelu.rs  mod.rs  relu.rs  sigmoid.rs
src/datasets/: README.md  mnist.rs  mod.rs
src/jwall_gpt/: __init__.py  sample.py  train.py
src/jwall_gpt/data/: dataset.py  datasets.py  prepare.py
src/jwall_gpt/model/: attention.py  block.py  gpt.py
src/jwall_gpt/utils/: checkpoint.py  config.py
src/layers/: attention.rs  layer_norm.rs  linear.rs  mod.rs  multi_head.rs  traits.rs
src/loss/: cross_entropy.rs  mod.rs  mse.rs  traits.rs
src/matrix/: blas.rs  mod.rs  naive.rs
src/optimizers/: adam.rs  mod.rs  sgd.rs  traits.rs
tests/: test_datasets.py  test_model.py  test_xor.rs
