[package]
name = "jwall_gpt"
version = "0.1.0"
edition = "2024"

[features]
default = ["blas"]
blas = ["ndarray", "blas-src", "openblas-src", "ndarray-rand"]

[dependencies]
ndarray = { version = "0.15", optional = true }
ndarray-rand = { version = "0.14", optional = true }
blas-src = { version = "0.10", features = ["openblas"], optional = true }
openblas-src = { version = "0.10", features = ["cblas", "static"], optional = true }
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "matrix_backend_comparison"
harness = false
